--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -25,13 +25,14 @@
             <ui:repeat var="state" value="#{_bean.metadatesObj.statesList}" > 
                 <p:accordionPanel activeIndex="#{_bean.rightPageIndex}">
                     <p:ajax event="tabChange" listener="#{_bean.onRightTabChange}"/>
-                    <p:tab title="#{bundle.State}: #{state.name}" rendered="#{_bean.editedItem != null}" >                       
+                    <p:tab title="#{bundle.State}: #{state.bundleName}" rendered="#{_bean.editedItem != null}" >                       
                         <p:dataTable id="tblRight" value="#{_bean.getRightItemForState(_bean.editedItem, state)}" var="right" 
                                      tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 colCenter" style="width: 100%;"
                                      sortField="#{right.name}"
                                      emptyMessage="#{bundle.EmptyTable}">
 
                             <p:column headerText="#{bundle.RightOwner}" >
+                                 <h:graphicImage value="/resources/icon/#{right.icon}.png"/>
                                 <h:outputText value="#{right.name}"/>
                             </p:column>
                             <p:column headerText="#{bundle.Read}">
