--- a/escom-bpm-web/src/main/webapp/view/services/mail-service.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail-service.xhtml
@@ -1,9 +1,9 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-service.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                template="/view/templ/templ-service.xhtml">
 
     <ui:param name="_bean" value="#{mailBean}"/>
     
@@ -65,8 +65,9 @@
                             actionListener="#{mailBean.onCheckConnect()}"
                             update="eastFRM"/>
                 <p:commandButton icon="ui-icon-extlink" value="#{bundle.MessagesBox}"
-                            title="#{bundle.PreviewMessagesBox}"                            
-                            actionListener="#{mailBean.onOpenMailBox()}"/>
+                                 immediate="true"
+                                 title="#{bundle.PreviewMessagesBox}"                            
+                                 actionListener="#{mailBean.onOpenMailBox()}"/>
             </h:panelGrid>
            
         </p:panelGrid>
